# code-jail

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  docs.yml  release.yml
demos/: README.md  arbiter-policy.toml  burner.rs  demo.sh  hello.rs  make_demo.sh  spy.rs  writer.rs
demos/01-sandbox-isolation/: README.md  demo.sh  program.rs
demos/02-escape-attempt/: README.md  demo.sh  program.rs
demos/03-capability-grants/: README.md  demo.sh  program.rs
demos/04-fuel-limits/: README.md  demo.sh  program.rs
demos/05-arbiter-policy/: README.md  arbiter-policy.toml  demo.sh
demos/05-policy-enforcement/: README.md  demo.sh
demos/06-intent-drift/: README.md  demo.sh  policy.toml  program.rs
demos/07-audit-trail/: README.md  arbiter-policy.toml  demo.sh  policy.toml  program.rs
demos/08-landlock-native/: demo.sh  jail-claude.sh  landlock-proof.sh
demos/09-policy-native/: demo.sh  policy.toml
docs/: arbiter.rst  architecture.rst  capabilities.rst  caskfile.rst  changelog.rst  cli.rst  conf.py  containmentfile.rst  contributing.rst  index.rst  install.rst  jailfile.rst  make-architecture.rst  policy.rst  quickstart.rst  resource-limits.rst  security.rst  tool-migration.md  wasm-tools-architecture.md
examples/: Caskfile.toml  Containmentfile.toml  JailFile.toml  arbiter-policy.toml  policy.toml
src/: analyzer.rs  arbiter.rs  capability.rs  container.rs  image.rs  landlock.rs  main.rs  make.rs  native_bridge.rs  policy.rs  runtime.rs  sandbox.rs  seccomp.rs
tests/: integration.rs  landlock_integration.rs  make_benchmark.rs  make_integration.rs
tests/fixtures/: args_test.rs  env_test.rs  escape_attempt.rs  fs_read.rs  fs_write.rs  fuel_burn.rs  hello.rs
tools/file-tool/: Cargo.toml  JailFile.toml  README.md
tools/file-tool/src/: main.rs
tools/http-tool/: Cargo.toml  JailFile.toml  README.md
tools/http-tool/src/: main.rs
