[package]
name = "codejail"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", features = ["sched", "signal", "user", "mount", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = "43"
wasmtime-wasi = "43"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Policy enforcement crates (from crates.io)
arbiter-mcp = "0.0.28"
arbiter-audit = "0.5"
arbiter-policy = "0.0.28"
arbiter-session = "0.0.28"
arbiter-identity = "0.0.28"
arbiter-behavior = "0.0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
